<resources>
    <string name="app_name">NewsApp</string>
    <string name="api_key">a42011ba5ef14433a80ba5a093319b34</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
    <string name="source_website">Source website</string>
</resources>