<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/lightGray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="50dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                app:defaultQueryHint="Search News..."
                app:iconifiedByDefault="false"
                android:layout_width="match_parent"
                android:layout_height="40dp">
            </androidx.appcompat.widget.SearchView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:background="@color/black"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:paddingBottom="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:text="@string/business"
                app:cornerRadius="50dp"
                android:textSize="12sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:text="@string/entertainment"
                app:cornerRadius="50dp"
                android:textSize="12sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:text="@string/general"
                app:cornerRadius="50dp"
                android:textSize="12sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:text="@string/health"
                app:cornerRadius="50dp"
                android:textSize="12sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:text="@string/science"
                app:cornerRadius="50dp"
                android:textSize="12sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:text="@string/sports"
                app:cornerRadius="50dp"
                android:textSize="12sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:text="@string/technology"
                app:cornerRadius="50dp"
                android:textSize="12sp"></com.google.android.material.button.MaterialButton>

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>